--- a/package.json
+++ b/package.json
@@ -1,25 +1,11 @@
 {
-  "name": "node-template",
-  "version": "1.0.0",
-  "description": "Teste de api node",
-  "main": "src/server.js",
-  "scripts": {
-    "start": "nodemon src/server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/LucianoRK/node-template.git"
-  },
-  "author": "LucianoRK",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/LucianoRK/node-template/issues"
-  },
   "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "prisma": "^5.7.0",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "@types/express": "^4.17.21" 
   }
 }
