--- a/.env.exemple
+++ b/.env.exemple
@@ -1,6 +1,4 @@
 SERVER_HOST='0.0.0.0'
 SERVER_PORT=8080
 
-DB_HOST=localhost
-DB_USER=admin
-DB_PASSWORD=password
+DATABASE_URL="mysql://USER:PASS@HOST:PORT/SCHEMA"
