--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "scripts": {
+    "tw": "tsc --watch",
+    "start": "npx nodemon ./lib/main.js"
+  },
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "prisma": "^5.7.0",
+    "prisma": "^5.7.1",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21" 
+    "@types/express": "^4.17.21",
+    "nodemon": "^3.0.2"
   }
 }
